tests/interpreter/logical-or-bad-types.stderr
error: expected 'Bool', got 'Number'
 --> $DIR/logical-or-bad-types.lox:1:1
  |
1 | 1 or 2;
  | ^
